--- a/static/index.html
+++ b/static/index.html
@@ -5,10 +5,10 @@
     <title>Welcome to the FlexiRAG Service</title>
 </head>
 <body>
-    <h1>Welcome to the FlexiRAG Service</h1>
+    <h1>Welcome to the Flexi-RAG Service</h1>
     <p>This is a simple welcome page for administrators.</p>
     <ul>
-        <li><a href="/chatgpt-client/">Simple Chat Client</a></li>
+        <li><a href="/chat/">Simple Chat</a> - a client if you don't want to use the API directly</li>
         <li><a href="/hello">Hello response (JSON)</a></li>
         <li><a href="/health">Health Check</a></li>
         <li><!--<a href="/admin">-->Admin URLs:<!--</a>-->
@@ -19,6 +19,12 @@
           </ul>
         </li>
     </ul>
+    <p>More: <a href="https://github.com/aisbroker/flexi-rag/" target=_NEW>flexi-rag@github</a></p>
+    <!--
+    <span id=message style="color:yellow;font-size:10px">
+      <a href="https://github.com/aisbroker/flexi-rag/" target=_NEW>flexi-rag@github</a>
+    </span>
+    -->
     <br/>
     <br/>
 
