Fine tuning home page and chat page

--- a/static/chat/index.html
+++ b/static/chat/index.html
@@ -59,12 +59,16 @@ header { color:#222; padding:12px; font-size:20px; height:45px; font-family:"Ope
 
 <header>
   <div id=heading style="float:left">Simple Chat - for Flexi-RAG<br>
-    <span id=message style="color: #bd34fe; XXXcolor:yellow;font-size:10px">
-        Back to: <a href="/">Home</a>
+    <span id=message0 style="color: #bd34fe; XXXcolor:yellow;font-size:10px">
+        <a href="/">Back to: Home</a>
+    </span>
+    <span>&nbsp;</span> 
+    <span id=message1 style="color: #bd34fe; XXXcolor:yellow;font-size:10px">
+        <a href="https://github.com/casualwriter/vanilla-chatgpt" target=_NEW>This chat client based on: vanilla-chatgpt@20230412@github</a>
     </span>
     <span>&nbsp;</span> 
     <span id=message style="color: #bd34fe; XXXcolor:yellow;font-size:10px">
-        This chat client based on: <a href="https://github.com/casualwriter/vanilla-chatgpt" target=_NEW>vanilla-chatgpt@20230412@github</a>
+        &nbsp
     </span>
   </div>
   <div id=menu style="float:right;">
